--- a/Spring_day02/pom.xml
+++ b/Spring_day02/pom.xml
@@ -4,6 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
 	<!--hi第十-->
+	    <!--ggggg-->
         <artifactId>Mybatis_ehcache</artifactId>
         <groupId>pdl</groupId>
         <version>1.0-SNAPSHOT</version>
